name:                core-schema-convert
version:             0.1.0.0
synopsis:            Converts from core data schema to any other format
description:         Please see README.md
homepage:            https://rekordbuddy.org
license:             BSD3
license-file:        LICENSE
author:              Christopher Lord
maintainer:          didier@rekordbuddy.org
copyright:           Copyright (C) 2020-2021 Didier Malenfant (didier@rekordbuddy.org)
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     RekordBuddy.Types
                     , RekordBuddy.CoreData.Parser
                     , RekordBuddy.Helpers
                     , RekordBuddy.Configuration
                     , RekordBuddy.Printer
                     , RekordBuddy.Printer.NxA
                     , RekordBuddy.Printer.Header
                     , RekordBuddy.Printer.Body
                     , RekordBuddy.Printer.Test
                     , RekordBuddy.Printer.Wrapper
                     , RekordBuddy.Printer.CDMigrator
  build-depends:       base >= 4.7 && < 5
                     , transformers
                     , resourcet
                     , conduit
                     , prettyprinter
                     , text
                     , containers
                     , xml-conduit
  default-language:    Haskell2010

executable dpcd
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , containers
                     , cmdargs
                     , directory
                     , filepath
                     , text
                     , core-schema-convert
  default-language:    Haskell2010

test-suite core-schema-convert-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/clord/core-schema-convert
